--- a/package.json
+++ b/package.json
@@ -3,28 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://tdangw.github.io/Chess-AI-Arena",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "npx gh-pages -d dist",
-    "tw:init": "tailwindcss init -p"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.22.0",
+    "react-dom": "^19.2.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "@google/genai": "^1.22.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0",
-    "gh-pages": "^6.1.1"
+    "vite": "^6.2.0"
   }
 }
