--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "chess-ai-arena",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "homepage": "https://tdangw.github.io/Chess-AI-Arena",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "npx gh-pages -d dist",
+    "tw-config": "tailwindcss init -p"
   },
   "dependencies": {
     "react-dom": "^19.2.0",
@@ -17,6 +21,11 @@
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "gh-pages": "^6.1.1",
+    "tailwindcss": "^4.1.14",
+    "@tailwindcss/postcss": "^4.1.14",
+    "postcss": "^8.5.6",
+    "autoprefixer": "^10.4.21"
   }
 }
