--- a/package.json
+++ b/package.json
@@ -2,30 +2,11 @@
   "name": "chess-ai-arena",
   "private": true,
   "version": "1.0.0",
-  "homepage": "https://tdangw.github.io/Chess-AI-Arena",
-  "type": "module",
+  "homepage": "https://tdangw.github.io/chess-ai-arena/",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "npx gh-pages -d dist",
-    "tw-init": "./node_modules/.bin/tailwindcss init -p"
-  },
-  "dependencies": {
-    "react-dom": "^19.2.0",
-    "react": "^19.2.0",
-    "@google/genai": "^1.22.0"
+    "deploy": "gh-pages -d ."
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0",
-    "gh-pages": "^6.1.1",
-    "tailwindcss": "^4.1.14",
-    "@tailwindcss/postcss": "^4.1.14",
-    "postcss": "^8.5.6",
-    "autoprefixer": "^10.4.21"
+    "gh-pages": "^6.1.1"
   }
 }
