final fix: correct relative paths in index.html

--- a/package.json
+++ b/package.json
@@ -2,11 +2,24 @@
   "name": "chess-ai-arena",
   "private": true,
   "version": "1.0.0",
-  "homepage": "https://tdangw.github.io/chess-ai-arena/",
+  "type": "module",
+  "homepage": "https://tdangw.github.io/Chess-AI-Arena/",
   "scripts": {
-    "deploy": "gh-pages -d ."
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "deploy": "gh-pages -d dist",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "gh-pages": "^6.1.1",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.3"
   }
 }
