final fix: correct relative paths in index.html

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "homepage": "https://tdangw.github.io/Chess-AI-Arena/",
+  "homepage": "https://tdangw.github.io/chess-ai-arena/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
